--- a/source/404.html
+++ b/source/404.html
@@ -4,7 +4,7 @@ layout: false
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="http://stariveer.qiniudn.com/index/favicon.png">
+    <link rel="icon" href="/pic/qiniu/index/favicon.png">
     <style>
         html{
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -26,7 +26,7 @@ layout: false
             height: 600px;
             background-size: 100%;
             margin: 0 auto;
-            background-image: url(http://stariveer.qiniudn.com/index/404.jpg);
+            background-image: url(/pic/qiniu/index/404.jpg);
         }
     </style>
 </head>
